--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,14 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/ai-feed/page.tsx", "app/config/page.tsx", "app/control/page.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/ai-feed/page.tsx",
+    "app/config/page.tsx",
+    "app/control/page.jsx"
+  ],
   "exclude": ["node_modules"]
 }
